@@ -1,3 +1,7 @@
+2015-02-02  Alan Modra  <amodra@gmail.com>
+
+	* gcc.target/powerpc/cprophard.c: New.
+
 2015-02-01  Andreas Tobler  <andreast@gcc.gnu.org>
 
 	* gfortran.dg/enum_9.f90: Use arm_eabi instead of arm*-*-linux*.
